tests/parsing/unterminated-pi-type-literal.lushui
;; TEST fail check

data X (A: Type): (m: M) =
